# bachelor

./: README.md  pyproject.toml
.ipynb_checkpoints/: VisualKinematics-checkpoint.ipynb  load_model_from_gltf-checkpoint.ipynb
aufgaben/: 01_Musterlösung.ipynb  02_Musterlösung.ipynb  02_Übung_und_Praktikum.ipynb  03_Musterlösung.ipynb  03_Übung_und_Praktikum.ipynb  04_Musterlösung.ipynb  05_Übung_und_Praktikum.ipynb  09_Musterlösung.ipynb  09_Übung_und_Praktikum.ipynb  10_Übung_und_Praktikum.ipynb  MobileRoboter.ipynb  Musterloesung_Praktikum_05.ipynb  Musterloesung_Praktikum_06.ipynb  Musterloesung_Praktikum_07.ipynb  Praktikum_06.ipynb  Praktikum_11.ipynb
aufgaben/.ipynb_checkpoints/: 01_Musterlösung-checkpoint.ipynb  02_Musterlösung-checkpoint.ipynb  02_Übung_und_Praktikum-checkpoint.ipynb  03_Musterlösung-checkpoint.ipynb  03_Übung_und_Praktikum-checkpoint.ipynb  04_Musterlösung-checkpoint.ipynb  04_Übung_und_Praktikum-checkpoint.ipynb  05_Übung_und_Praktikum-checkpoint.ipynb  09_Musterlösung-checkpoint.ipynb  09_Übung_und_Praktikum-checkpoint.ipynb  10_Übung_und_Praktikum-checkpoint.ipynb  MobileRoboter-checkpoint.ipynb  Musterloesung_Praktikum_05-checkpoint.ipynb  Musterloesung_Praktikum_06-checkpoint.ipynb  Musterloesung_Praktikum_07-checkpoint.ipynb  Praktikum_06-checkpoint.ipynb  Praktikum_11-checkpoint.ipynb
docs/: index.html  search.js  util.html
examples/: quader.ipynb  robot.ipynb  rotations.ipynb
src/: eigenvec.ipynb  load_model_from_gltf.ipynb  load_object.ipynb  prototyp.ipynb  robot.ipynb  rotations.ipynb  sympy_test.ipynb
visualkinematics/: util.py
