[tool.poetry]
name = "visualkinematics"
version = "0.1.0"
description = "Solution for visualizing kinematics in robotics"
authors = ["philmik93 <philipp.mikos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pythreejs = "^2.4.2"
ipywidgets = "^8.1.5"
numpy = "^2.1.3"
sympy = "^1.13.3"
pygltflib = "^1.16.2"
scipy = "^1.15.2"
pywavefront = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
