[tool.poetry]
name = "visualkinematics"
version = "0.1.0"
description = "Solution for visualizing kinematics in robotics"
authors = ["philmik93 <philipp.mikos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pythreejs = "^2.4.2"
ipywidgets = ">=7.7.0,<8"
numpy = ">=1.24,<2.0"
sympy = "^1.13.3"
pygltflib = "^1.16.2"
scipy = ">=1.5,<2.0"
pywavefront = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
